--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Pizzapoint",
+  "name": "Welcome to pizza point",
   "icons": [
     {
       "src": "cheft1.png",
